<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ResponseCardViewHolder">

    <androidx.cardview.widget.CardView
        android:id="@+id/responseCardView"
        android:layout_width="417dp"
        android:layout_height="99dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065">


        <LinearLayout
            android:id="@+id/eachResponseLLParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/dateTimeLL"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@color/responseLLbg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dayTextView"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/responseday_monthbg"
                    android:text="@string/response_day_txt"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/responsedatebg"
                    android:text="@string/response_date_txt"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/monthTextView"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/responseday_monthbg"
                    android:text="@string/response_month_txt"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/responseDetailsLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/responseTime_txtview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Time : 02:54"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/responseUserName_txtView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Created By: Tom" />
                <TextView
                    android:id="@+id/response_viewbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/nhs_color"
                    android:text="View Survey" />

<!--                <com.google.android.material.button.MaterialButton-->
<!--                    android:id="@+id/response_viewbtn"-->
<!--                    style="@style/Widget.AppCompat.Button.Small"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="View Survey"-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
<!--                    android:textColor="@color/nhs_color"-->
<!--                    app:backgroundTint="@android:color/transparent"-->
<!--                    app:cornerRadius="8dp"-->
<!--                    app:rippleColor="#33AAAAAA"-->
<!--                    app:strokeColor="@color/nhs_color"-->
<!--                    app:strokeWidth="2dp" />-->


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="107dp"
        android:background="@color/nhs_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/responseCardView"
        app:layout_constraintVertical_bias="0.001" />
</androidx.constraintlayout.widget.ConstraintLayout>
